open-policy-agent/gatekeeper/require-prefix/k8srequiredprefix-ns.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredPrefixes
metadata:
  name: ns-must-start-with-ns
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    prefix: "ns"
