open-policy-agent/gatekeeper/require-prefix/k8srequiredprefix.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredprefixes
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredPrefixes
        listKind: K8sRequiredPrefixesList
        plural: k8srequiredprefixes
        singular: k8srequiredprefix
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            prefix:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredprefixes

        violation[{"msg": msg, "details": {"missing_prefix": required}}] {
          required := {label | label := input.parameters.prefix}
          not startswith(input.review.object.metadata.name, "ns")
          msg := sprintf("you must provide prefix: %v, provided: %v", [required, input.review.object.metadata.name])
        }
